# bad-apple

./: pyproject.toml
bad__apple/: main.py
tests/: bad_apple.py
